Fix object action button group not visible when item is active in inspector

--- a/src/ui.css
+++ b/src/ui.css
@@ -250,7 +250,8 @@ light__textInput--faint {
     overflow: hidden;
 }
 
-.NodeContainer:hover .r {
+.NodeContainer:hover .r,
+.NodeContainer--active:hover .r {
     visibility: visible;
 }
 
